--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2&family=Lustria&family=Palanquin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <title>Exercicio Display</title>
 </head>
@@ -10,11 +13,11 @@
   <h1>Carros e Motos</h1>
   <div class="caixanuncio"><h2> <span class="corveiculos">Carro:</span> <span>R$ 89.990,00</span></h2>
   <p><div>Carro modelo <span>2024</span>, com <span>2.000 km</span> rodados.</div></p>
-  <button><a href="">Comprar Carro!</a></button></div>
+  <button><a href="/css/carro.html/carro.html">Informações sobre os modelos de carros</a></button></div>
   <br>
   <br>
   <div class="caixanuncio"><h2> <span class="corveiculos">Moto:</span> <span>R$ 24.490,00</span></h2>
     <p><div>Moto modelo <span>2024</span>, com <span>850 km</span> rodados.</p></div>
-  <button><a href="">Comprar Moto!</a></button></div>
+  <button><a href="/css/moto.html/index.html">Informações sobre os modelos de motos</a></button></div>
 </body>
 </html>
